buildscript {
    ext.kotlin_version = "1.4.31"
}

plugins {
    id "idea"
    id "java"
    id "org.jetbrains.kotlin.jvm" version "$kotlin_version"
    id "org.jetbrains.kotlin.kapt" version "$kotlin_version"
    id "com.adarshr.test-logger" version "2.0.0"
    id "org.jetbrains.dokka" version "0.10.1"
}

group "com.totec.trading"
version "0.1"

sourceCompatibility = 1.8

repositories {
    mavenCentral()
    jcenter()
}

dependencies {
    implementation "com.totec.trading:totec-core:0.1"
    implementation "com.totec:totec-parser:0.1"
    implementation files("../totec-core/fastutil-8.3.2-totec-mod.jar")

    api "com.google.dagger:dagger:2.27"
    api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
    api "org.openjdk.jmh:jmh-core:1.21"

    kapt "org.openjdk.jmh:jmh-generator-annprocess:1.21"
    kapt "com.google.dagger:dagger-compiler:2.27"

    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.2"
    testImplementation "io.mockk:mockk:1.10.2"
    testImplementation "io.kotest:kotest-runner-junit5-jvm:4.2.0.RC1"
    testImplementation "io.kotest:kotest-assertions-core-jvm:4.2.0.RC1"
    testImplementation "io.kotest:kotest-property-jvm:4.2.0.RC1"
}
compileKotlin {
    kotlinOptions.jvmTarget = "1.8"
}

compileTestKotlin {
    kotlinOptions.jvmTarget = "1.8"
}

test {
    useJUnitPlatform()
    jvmArgs "--illegal-access=permit"
}

kapt {
    includeCompileClasspath = false
}

test {
    useJUnitPlatform()
    jvmArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']
}
